--- a/MW5 Mod Oganizer WPF/App.xaml
+++ b/MW5 Mod Oganizer WPF/App.xaml
@@ -19,6 +19,8 @@
                 <ResourceDictionary Source="Themes/Button/MenuItemContextTheme.xaml"/>
                 <ResourceDictionary Source="Themes/Button/ButtonAddModTheme.xaml"/>
                 <ResourceDictionary Source="Themes/Button/ButtonUpdateAvailableTheme.xaml"/>
+                <ResourceDictionary Source="Themes/Button/ButtonArrowUp.xaml"/>
+                <ResourceDictionary Source="Themes/Button/ButtonArrowDown.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
