You can now enable and disable all selected mods through context action

--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridRowTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridRowTheme.xaml
@@ -43,6 +43,8 @@
                             </SelectiveScrollingGrid>
                             <Border.ContextMenu>
                                 <ContextMenu>
+                                    <MenuItem Header="Enable selection" Command="{Binding EnableSelectedModsCommand}"/>
+                                    <MenuItem Header="Disable selection" Command="{Binding DisableSelectedModsCommand}"/>
                                     <MenuItem Header="Remove Mod.." Command="{Binding DeleteModFolderCommand}"/>
                                     <Separator/>
                                     <MenuItem Header="Open in Explorer" Command="{Binding OpenModFolderCommand}"/>
