--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridCellTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridCellTheme.xaml
@@ -10,7 +10,10 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridCell}">
-                    <Border Padding="15 0" Background="{TemplateBinding Background}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="Center">
+                    <Border Padding="15 0" 
+                            Background="{TemplateBinding Background}" 
+                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
+                            VerticalAlignment="Center">
                         <ContentPresenter VerticalAlignment="Center" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                     </Border>
                 </ControlTemplate>
