--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridTheme.xaml
@@ -19,6 +19,7 @@
         <Setter Property="CanUserReorderColumns" Value="False"/>
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="GridLinesVisibility" Value="None"/>
+        <Setter Property="AlternationCount" Value="2"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGrid}">
