--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridConflictRowTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridConflictRowTheme.xaml
@@ -9,6 +9,7 @@
         <Setter Property="SnapsToDevicePixels" Value="true"/>
         <Setter Property="Validation.ErrorTemplate" Value="{x:Null}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="IsSelected" Value="{Binding Path=IsSelectedConflict}"/>
         <Setter Property="ValidationErrorTemplate">
             <Setter.Value>
                 <ControlTemplate>
@@ -34,13 +35,6 @@
                                 <DataGridDetailsPresenter Grid.Column="1" Grid.Row="1" SelectiveScrollingGrid.SelectiveScrollingOrientation="{Binding AreRowDetailsFrozen, ConverterParameter={x:Static SelectiveScrollingOrientation.Vertical}, Converter={x:Static DataGrid.RowDetailsScrollingConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" Visibility="{TemplateBinding DetailsVisibility}"/>
                                 <DataGridRowHeader Grid.RowSpan="2" SelectiveScrollingGrid.SelectiveScrollingOrientation="Vertical" Visibility="{Binding HeadersVisibility, ConverterParameter={x:Static DataGridHeadersVisibility.Row}, Converter={x:Static DataGrid.HeadersVisibilityConverter}, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"/>
                             </SelectiveScrollingGrid>
-                            <Border.ContextMenu>
-                                <ContextMenu>
-                                    <MenuItem Header="Remove Mod.." Command="{Binding DeleteModFolderCommand}"/>
-                                    <Separator/>
-                                    <MenuItem Header="Open in Explorer" Command="{Binding OpenModFolderCommand}"/>
-                                </ContextMenu>
-                            </Border.ContextMenu>
                         </Border>
                     </Grid>
                 </ControlTemplate>
@@ -51,13 +45,6 @@
                 <Setter Property="Background" Value="#FFF5F5F5"/>
                 <Setter Property="BorderBrush" Value="#FFC8C8C8"/>
             </Trigger>
-            <!--<MultiTrigger>
-                <MultiTrigger.Conditions>
-                    <Condition Property="IsSelected" Value="True"/>
-                    <Condition Property="Selector.IsSelectionActive" Value="False"/>
-                </MultiTrigger.Conditions>
-                <Setter Property="Background" Value="#dfdfdf"/>
-            </MultiTrigger>-->
             <DataTrigger Binding="{Binding ModViewModelStatus}" Value="Overwrites">
                 <Setter Property="BorderBrush" Value="Red"/>
                 <Setter Property="Background" Value="#FFFFBDBD"/>
