Added label to manifest window that indicates a conflicting mod needs to be selected before manifests show up

--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -315,6 +315,19 @@
                             </DataGrid.Columns>
                         </DataGrid>
                     </Border>
+                    <TextBlock Text="Select a conflicting mod from above to view manifests"
+                               TextWrapping="Wrap"
+                               FontSize="12"
+                               Opacity="0.4"
+                               IsHitTestVisible="False"
+                               Grid.Row="6"
+                               Grid.Column="0"
+                               Margin="0 0 10 0"
+                               HorizontalAlignment="Center"
+                               VerticalAlignment="Center"
+                               Visibility="{Binding ConflictNotificationState}">
+                        
+                    </TextBlock>
 
                     <Thumb x:Name="leftThumb"
                            Grid.Row="0"
