--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -189,10 +189,30 @@
                                         Binding="{Binding LoadOrder, UpdateSourceTrigger=PropertyChanged}" 
                                         CanUserSort="False"/>
                     <DataGridTextColumn Header="Mod" 
-                                        IsReadOnly="True" 
-                                        MinWidth="250" 
+                                        IsReadOnly="True"
+                                        Width="auto"
                                         Binding="{Binding DisplayName}" 
                                         CanUserSort="False"/>
+                    <DataGridTemplateColumn IsReadOnly="True"
+                                            Width="50"
+                                            MinWidth="50"
+                                            MaxWidth="50"
+                                            CanUserSort="False">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Image Source="/WarningIcon.png"
+                                       Height="16"
+                                       Width="16"
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"
+                                       Visibility="{Binding HasConflicts}">
+                                    <ToolTipService.ToolTip>
+                                        <ToolTip Content="This mod has conflicts."/>
+                                    </ToolTipService.ToolTip>
+                                </Image>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                     <DataGridTextColumn Header="Author" 
                                         IsReadOnly="True" 
                                         MinWidth="200" 
