--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -203,11 +203,11 @@
                                 <Image Source="/WarningIcon.png"
                                        Height="16"
                                        Width="16"
-                                       HorizontalAlignment="Center"
-                                       VerticalAlignment="Center"
+                                       HorizontalAlignment="Stretch"
+                                       VerticalAlignment="Stretch"
                                        Visibility="{Binding HasConflicts}">
                                     <ToolTipService.ToolTip>
-                                        <ToolTip Content="This mod has conflicts."/>
+                                        <ToolTip Content="Mod(s) detected altering the same asset(s). This may be intentional, please check before committing load order."/>
                                     </ToolTipService.ToolTip>
                                 </Image>
                             </DataTemplate>
