Added source column to datagrid that shows whether the mod has been loaded from the Primary or Secondary folder

--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -220,8 +220,13 @@
                                         CanUserSort="False"/>
                     <DataGridTextColumn Header="Version" 
                                         IsReadOnly="True" 
-                                        Width="*"
+                                        Width="auto"
                                         Binding="{Binding Version}" 
+                                        CanUserSort="False"/>
+                    <DataGridTextColumn Header="Source"
+                                        IsReadOnly="True"
+                                        Width="*"
+                                        Binding="{Binding Source}"
                                         CanUserSort="False"/>
                 </DataGrid.Columns>
             </DataGrid>
